<resources>
    <string name="app_name">Inventory</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>

    <string name="unknown_price">Unknown Price</string>

    <string name="empty_view_title_text">There is nothing to read. :(</string>
    <string name="empty_view_subtitle_text">Add a book!</string>

    <string name="category_book_title">Title</string>

    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <string name="hint_book_title">Book Title</string>
    <string name="hint_book_author">Author</string>

    <string name="unit_book_price">$</string>
    <string name="hint_book_price">Price</string>

    <string name="editor_insert_book_failed">Book Not Added :(</string>
    <string name="editor_insert_book_successful">Book Added!</string>

    <string name="editor_update_book_successful">Update Successful</string>
    <string name="editor_update_book_failed">Book Not Updated</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="unsaved_changes_dialog_msg">Discard any changes?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="editor_delete_book_successful">Book Deleted</string>
    <string name="editor_delete_book_failed">Problem deleting book</string>

    <string name="category_book_price">Price</string>

    <string name="category_book_quantity">Quantity</string>
    <string name="hint_book_quantity">Quantity</string>

    <string name="category_supplier_name">Supplier Name</string>
    <string name="hint_supplier_name">Supplier Name</string>

    <string name="category_supplier_phone">Supplier Phone</string>
    <string name="hint_supplier_phone">Supplier Phone</string>

    <string name="sale_button">Sale</string>
    <string name="Currency_type">$</string>
    <string name="quantity_label">Quantity:</string>

    <string name="sale_error">Error With Sale.</string>
    <string name="sale_complete">One Copy Sold!  Quantity Updated.</string>
    <string name="sale_no_copies">No Copies Left To Sell.</string>

    <string name="button_plus_sign">+</string>
    <string name="button_minus_sign">-</string>

    <string name="quantity_below_zero_error">Can\'t have negative quantity!</string>
</resources>
