<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Book Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_weight="30"
            android:text="@string/category_book_title" />

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_book_title"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="70"
            android:hint="@string/hint_book_title"
            android:inputType="textCapWords" />
    </LinearLayout>

    <!-- Book Price -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_weight="30"
            android:text="@string/category_book_price" />

        <EditText
            android:id="@+id/edit_book_price"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="70"
            android:hint="@string/hint_book_price"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <!-- Book Quantity Available -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_weight="30"
            android:text="@string/category_book_quantity" />

        <EditText
            android:id="@+id/edit_book_quantity"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="40"
            android:hint="@string/hint_book_quantity"
            android:inputType="number" />

        <Button
            android:id="@+id/quantity_button_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:text="@string/button_minus_sign" />

        <Button
            android:id="@+id/quantity_button_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:text="@string/button_plus_sign" />

    </LinearLayout>

    <!-- Supplier Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_weight="30"
            android:text="@string/category_supplier_name" />

        <EditText
            android:id="@+id/edit_supplier_name"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="70"
            android:hint="@string/hint_supplier_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <!-- Supplier Phone -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_weight="30"
            android:maxLines="1"
            android:text="@string/category_supplier_phone" />

        <EditText
            android:id="@+id/edit_supplier_phone"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:hint="@string/hint_supplier_phone"
            android:inputType="phone" />

        <!-- Button to open dialer to call phone number -->
        <Button
            android:id="@+id/phone_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:maxLines="1"
            android:text="Call" />

    </LinearLayout>

</LinearLayout>
